added container row and col

--- a/src/partials/test.html
+++ b/src/partials/test.html
@@ -1,1 +1,10 @@
-<h1>Test from partials</h1>
+<div class="grid-container">
+  <div class="grid-row">
+    <div class="grid-col grid-col--2">test</div>
+    <div class="grid-col grid-col--3">test</div>
+    <div class="grid-col grid-col--1">test</div>
+    <div class="grid-col grid-col--4">test</div>
+    <div class="grid-col grid-col--2">test</div>
+    <div class="grid-col grid-col--2">test</div>
+  </div>
+</div>
