--- a/src/scss/utils/_grid.scss
+++ b/src/scss/utils/_grid.scss
@@ -23,11 +23,20 @@
       width: percentage($i/$total-columns);
     }
   }
+
   &--padding-left {
-    padding-left: $gutter * 2;
+    padding-left: $gutter;
   }
 
   &--padding-right {
-    padding-right: $gutter * 2;
+    padding-right: $gutter;
+  }
+
+  &--margin-left {
+    margin-left: $gutter;
+  }
+
+  &--margin-right {
+    margin-right: $gutter;
   }
 }
