converted marigin n pad mixin to use rem key val

--- a/src/partials/test.html
+++ b/src/partials/test.html
@@ -3,7 +3,7 @@
     <div class="grid-col grid-col--2">test</div>
     <div class="grid-col grid-col--3">test</div>
     <div class="grid-col grid-col--1">test</div>
-    <div class="grid-col grid-col--4">test</div>
+    <div class="grid-col grid-col--4 m-l-8">test</div>
     <div class="grid-col grid-col--2">test</div>
     <div class="grid-col grid-col--2">test</div>
   </div>
