--- a/src/scss/utils/_vars.scss
+++ b/src/scss/utils/_vars.scss
@@ -8,22 +8,21 @@ $xl-screen-width: 1200px;
 $total-columns: 12;
 $base-spacing: 0.5rem;
 $base-font-size: 16px;
+// Adjust this to be the rem size you need
 $spaceamounts: (
-  8: 0.5,
-  // 12,
-    // 16,
-    // 20,
-    // 24,
-    // 32,
-    // 40,
-    // 48,
-    // 56,
-    // 64,
-    // 72,
-    // 80,
-    // 88,
-    // 96,
-    // 104,
-    // 112,,,,
-); // Adjust this to include the pixel amounts you need.
-$sides: (top, bottom, left, right); // Leave this variable alone
+  1: 0.5,
+  2: 1,
+  3: 1.5,
+  4: 2,
+  5: 2.5,
+  6: 3,
+  7: 3.5,
+  8: 4,
+  9: 4.5,
+  10: 5,
+  11: 5.5,
+  12: 6,
+  13: 6.5,
+  14: 7,
+);
+$sides: (top, bottom, left, right);
