--- a/src/partials/test.html
+++ b/src/partials/test.html
@@ -1,10 +1,10 @@
 <div class="grid-container">
   <div class="grid-row">
-    <div class="grid-col grid-col--2">test</div>
-    <div class="grid-col grid-col--3">test</div>
-    <div class="grid-col grid-col--1">test</div>
-    <div class="grid-col grid-col--4 m-l-8">test</div>
-    <div class="grid-col grid-col--2">test</div>
-    <div class="grid-col grid-col--2">test</div>
+    <div class="grid-col grid-col--tablet--6 grid-col--2">test</div>
+    <div class="grid-col grid-col--tablet--6 grid-col--3">test</div>
+    <div class="grid-col grid-col--tablet--6 grid-col--1">test</div>
+    <div class="grid-col grid-col--tablet--6 grid-col--4">test</div>
+    <div class="grid-col grid-col--tablet--6 grid-col--2">test</div>
+    <div class="grid-col grid-col--tablet--6 grid-col--10">test</div>
   </div>
 </div>
