--- a/src/partials/test.html
+++ b/src/partials/test.html
@@ -1,6 +1,10 @@
 <div class="grid-container">
   <div class="grid-row">
-    <div class="grid-col grid-col--t--6 grid-col--2">test</div>
+    <div class="grid-col grid-col--t--6 grid-col--9">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quidem
+      doloremque nisi magni quibusdam non esse. Officia consequuntur et eius,
+      qui distinctio, enim quas ut nesciunt pariatur, saepe rem nihil.
+    </div>
     <div class="grid-col grid-col--t--6 grid-col--3">test</div>
     <div class="grid-col grid-col--t--12 grid-col--1">test</div>
     <div class="grid-col grid-col--t--6 grid-col--4">test</div>
