added test article

--- a/src/partials/test.html
+++ b/src/partials/test.html
@@ -5,7 +5,17 @@
       doloremque nisi magni quibusdam non esse. Officia consequuntur et eius,
       qui distinctio, enim quas ut nesciunt pariatur, saepe rem nihil.
     </div>
-    <div class="grid-col grid-col--t--6 grid-col--3">test</div>
+    <div class="grid-col grid-col--t--6 grid-col--3">
+      <article>
+        <h4>Test title</h4>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ut
+          totam nesciunt, vitae quia voluptatibus aliquid dolores cupiditate!
+          Itaque sunt cum ab porro iure nesciunt quisquam explicabo numquam
+          placeat doloremque.
+        </p>
+      </article>
+    </div>
     <div class="grid-col grid-col--t--12 grid-col--1">test</div>
     <div class="grid-col grid-col--t--6 grid-col--4">test</div>
     <div class="grid-col grid-col--t--6 grid-col--2">test</div>
