--- a/src/scss/utils/_grid.scss
+++ b/src/scss/utils/_grid.scss
@@ -30,7 +30,7 @@
   @include tablet {
     // Column % Tablet
     &--t {
-      @for $i from 1 to $total-columns {
+      @for $i from 1 to $total-columns + 1 {
         &--#{$i} {
           width: percentage($i/$total-columns);
         }
@@ -40,7 +40,7 @@
 
   @include desktop {
     // Column % Desktop
-    @for $i from 1 to $total-columns {
+    @for $i from 1 to $total-columns + 1 {
       &--#{$i} {
         width: percentage($i/$total-columns);
       }
