--- a/src/scss/utils/_grid.scss
+++ b/src/scss/utils/_grid.scss
@@ -1,19 +1,21 @@
 .grid-container {
-  max-width: $xl-screen-width;
   margin: 0 auto;
+  max-width: 1200px;
   padding: 0 $base-spacing;
+
   &--fluid {
-    margin: 0;
     max-width: 100%;
+    .grid-row {
+      margin: 0;
+    }
   }
 }
 
 .grid-row {
   display: -ms-flexbox;
-  -ms-flex-wrap: wrap;
   display: flex;
   flex-wrap: wrap;
-  margin: 0 -1rem;
+  margin: 0 (-$base-spacing);
   // Remove Wrap
   &--no-wrap {
     flex-wrap: nowrap;
@@ -22,17 +24,16 @@
 
 .grid-col {
   box-sizing: border-box;
-  background-color: green;
-  border: 0.5px dashed black;
-  text-align: center;
   padding: 0 $base-spacing;
+  text-align: center;
   width: 100%;
+  border: 1px dashed black;
   @include tablet {
     // Column % Tablet
     &--t {
       @for $i from 1 to $total-columns + 1 {
         &--#{$i} {
-          width: percentage($i/$total-columns);
+          width: percentage($i / $total-columns);
         }
       }
     }
@@ -42,7 +43,7 @@
     // Column % Desktop
     @for $i from 1 to $total-columns + 1 {
       &--#{$i} {
-        width: percentage($i/$total-columns);
+        width: percentage($i / $total-columns);
       }
     }
   }
@@ -52,11 +53,10 @@
 @each $key, $value in $spaceamounts {
   @each $side in $sides {
     .m-#{str-slice($side, 0, 1)}-#{$key} {
-      margin-#{$side}: #{$value}rem;
+      margin-#{$side}: #{$value};
     }
-
     .p-#{str-slice($side, 0, 1)}-#{$key} {
-      padding-#{$side}: #{$value}rem;
+      padding-#{$side}: #{$value};
     }
   }
 }
